$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-05-07 [B] Removed the include path for Inspekt {SaWey}
2009-05-06 [S] Added form token to all important forms and also added a check on the token where needed {SaWey}
2009-05-05 [O] Cleaned up some unnecessary code in functions.inc.php {SaWey}
2009-05-05 [B] Fixed album thumbnail display on index page ignoring album keyword and approval status {Paver}
2009-05-05 [B] Fixed album thumbnail display for "Last-Updated Albums" meta-album {Paver}
2009-04-30 [B] Re-added alternating table rows for batch-add {GauGau}
2009-04-30 [O] Hiding unneeded file types from minibrowser {GauGau}
2009-04-30 [C] Added icon to minibrowser {GauGau}
2009-04-30 [O] Added alternating colors to debug_output {GauGau}
2009-04-29 [B] Fixed improper ban expirations due to time offset being incorrectly applied (thread ID 58546) {Paver}
2009-04-24 [B] Fixed sections in admin page to use full width {Nibbler}
2009-04-24 [O] Added expand/collapse styles {GauGau}
2009-04-24 [O] Added some icons to buttons {GauGau}
2009-04-24 [O] Optimized debug output {GauGau}
2009-04-23 [B] Increased maxlength for password field in user manager from 8 to 25 to match the limits elsewhere {Nibbler}
2009-04-21 [B] Fixed ecard image displaying at the wrong size {Nibbler}
2009-04-16 [D] Added expandable detail boxes to documentation {GauGau}
2009-04-13 [B] Fixed minibrowser when magic_quotes is on {Paver}
2009-04-12 [O] Replaced sidebar library dtree with treeview plugin for jquery {GauGau}
2009-03-31 [O] Removed css class variants that hardly made a difference to the original classes {GauGau} 